--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
   "name": "MrSterdy",
+  "short_name": "MrSterdy",
   "description": "A back-end developer from Russia that makes things for the web",
   "icons": [
     {
